--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,400;1,300&family=Open+Sans:ital,wght@0,300;0,400;0,600;1,300&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+body{
+  margin: 0;
+  padding: 0;
+  // font-family: 'Cormorant', serif;
+  font-family: 'Open Sans', sans-serif;
+  background-color:#fff;
+
+  ul{
+    list-style: none;
+    
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  a{
+    text-decoration: none;
+    color:inherit
   }
-  to {
-    transform: rotate(360deg);
+
+  p{
+    margin: 0;
   }
 }
