--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -1,23 +1,27 @@
 .header {
   background-color: white;
+  position: fixed;
+  left: 0;
+  top: 0;
   width: 100%;
-  height: 132px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  height: 122px;
+  padding-top: 35px;
+  padding-bottom: 35px;
   @media (max-width: 1024px) {
-
     height: 90px;
   }
   @media (max-width: 768px) {
     height: 70px;
-
+  }
+  @media (max-width: 480px) {
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 
   .headerContainer {
     max-width: 1200px;
     margin: 0 auto;
+    height: 100%;
     padding-left: 15px;
     padding-right: 15px;
     display: flex;
@@ -25,8 +29,11 @@
     align-items: center;
     @media (max-width: 768px) {
       display: flex;
-      justify-content: space-around;
-
+      justify-content: space-between;
+    }
+    @media (max-width: 480px) {
+      padding-left: 5px;
+      padding-right: 5px;
     }
 
     .menu {
@@ -68,24 +75,24 @@
     }
     .actions {
       display: flex;
-    
 
       button {
         border: none;
         background-color: white;
         margin-right: 20px;
-        @media (max-width: 425px) {
-          margin-right: 5px;
+        &:last-child {
+          margin-left: 80px;
         }
+
         cursor: pointer;
         &:last-child {
-          margin-right: 0px;
-
           @media (max-width: 1024px) {
             margin-left: 50px;
           }
-          @media (max-width: 600px) {
+
+          @media (max-width: 480px) {
             margin-left: 0px;
+            margin-right: 0px;
           }
         }
       }
