--- a/src/components/Logo/index.module.scss
+++ b/src/components/Logo/index.module.scss
@@ -3,19 +3,15 @@
   flex-direction: column;
   align-items: center;
   position: relative;
-
-
-  span{
-
-    @media (max-width:768px) {
-        
-        position: absolute;
-        bottom: -15px;
-    }
+  a img{
     @media (max-width:480px) {
-        
-      position: absolute;
-      bottom: -5px;
+      width: 40px;
+      height: 56px;
+      
+    }
+
   }
-  }
+
+
+ 
 }
