--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -7,6 +7,7 @@
   height: 122px;
   padding-top: 35px;
   padding-bottom: 35px;
+  z-index: 1000;
   @media (max-width: 1024px) {
     height: 90px;
   }
@@ -51,6 +52,8 @@
 
         li {
           margin-right: 65px;
+         
+          
           @media (max-width: 1024px) {
             margin-right: 30px;
           }
@@ -69,6 +72,13 @@
             font-weight: 400;
             line-height: normal;
             color: #151618;
+            a:hover {
+              text-decoration: underline;
+          
+            }
+           
+           
+            
           }
         }
       }
@@ -99,3 +109,6 @@
     }
   }
 }
+
+
+
