--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -46,14 +46,39 @@
         position: absolute;
         top: -1000px;
       }
-      ul {
+      .menuLinks {
         display: flex;
         list-style: none;
 
-        li {
+        button {
           margin-right: 65px;
-         
-          
+          text-decoration: none;
+          font-family: Open Sans;
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          color: #151618;
+          position: relative;
+          background-color: transparent;
+          border: none;
+          cursor: pointer;
+
+          &::before {
+            content: "";
+            position: absolute;
+            width: 0%;
+            height: 2px; 
+            bottom: -8px;
+            left: 0;
+            background-color: #151618; 
+            transition: width 0.3s ease; 
+          }
+          &:hover::before,
+          &:active::before {
+            width: 100%;
+          }
+
           @media (max-width: 1024px) {
             margin-right: 30px;
           }
@@ -64,51 +89,32 @@
               margin-right: 50px;
             }
           }
-          a {
-            text-decoration: none;
-            font-family: Open Sans;
-            font-size: 18px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: normal;
-            color: #151618;
-            a:hover {
-              text-decoration: underline;
-          
-            }
-           
-           
-            
-          }
         }
       }
     }
-    .actions {
-      display: flex;
+  }
+  .actions {
+    display: flex;
 
-      button {
-        border: none;
-        background-color: white;
-        margin-right: 20px;
-        &:last-child {
-          margin-left: 80px;
+    button {
+      border: none;
+      background-color: white;
+      margin-right: 20px;
+      &:last-child {
+        margin-left: 80px;
+      }
+
+      cursor: pointer;
+      &:last-child {
+        @media (max-width: 1024px) {
+          margin-left: 50px;
         }
 
-        cursor: pointer;
-        &:last-child {
-          @media (max-width: 1024px) {
-            margin-left: 50px;
-          }
-
-          @media (max-width: 480px) {
-            margin-left: 0px;
-            margin-right: 0px;
-          }
+        @media (max-width: 480px) {
+          margin-left: 0px;
+          margin-right: 0px;
         }
       }
     }
   }
 }
-
-
-
