--- a/src/components/TeaBlog/index.module.scss
+++ b/src/components/TeaBlog/index.module.scss
@@ -33,31 +33,31 @@
       line-height: normal;
       margin-bottom: 60px;
       text-align: center;
-      @media (max-width:375px) {
+      @media (max-width: 375px) {
         margin-bottom: 30px;
         font-size: 24px;
-        
       }
     }
 
     .blog {
       display: flex;
       flex-wrap: wrap;
-    
+
       justify-content: space-between;
       margin-bottom: 60px;
       align-items: center;
-      @media (max-width:950px) {
+      @media (max-width: 950px) {
         flex-direction: column;
         justify-content: center;
-        align-items:center;
-        
+        align-items: center;
+        margin-bottom: 0px;
       }
       .blogItem {
         display: flex;
         margin-bottom: 40px;
         @media (max-width: 480px) {
           flex-direction: column;
+  
         }
 
         img {
@@ -65,6 +65,10 @@
           width: 230px;
           height: 153px;
           flex-shrink: 0;
+          @media (max-width: 768px) {
+            width: 300px;
+            height: 250px;
+          }
           @media (max-width: 480px) {
             margin-right: 0px;
           }
@@ -79,6 +83,7 @@
           @media (max-width: 480px) {
             margin-top: 10px;
             margin-bottom: 30px;
+            
           }
 
           p {
@@ -96,12 +101,11 @@
             font-style: normal;
             font-weight: 300;
             line-height: normal;
-      
           }
 
           .read {
             display: flex;
-            align-items:center;
+            align-items: center;
             margin-top: 20px;
 
             span {
@@ -111,6 +115,7 @@
               font-weight: 300;
               line-height: normal;
               margin-right: 8px;
+              display: block;
             }
           }
         }
