--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -5,14 +5,13 @@
   top: 0;
   width: 100%;
   height: 122px;
+  z-index: 1000;
   padding-top: 35px;
   padding-bottom: 35px;
-  z-index: 1000;
   @media (max-width: 1024px) {
-    height: 90px;
-  }
-  @media (max-width: 768px) {
-    height: 70px;
+    height: auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
   @media (max-width: 480px) {
     padding-top: 10px;
@@ -22,19 +21,16 @@
   .headerContainer {
     max-width: 1200px;
     margin: 0 auto;
-    height: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
     @media (max-width: 768px) {
       display: flex;
+
       justify-content: space-between;
-    }
-    @media (max-width: 480px) {
-      padding-left: 5px;
-      padding-right: 5px;
     }
 
     .menu {
@@ -42,13 +38,29 @@
       @media (max-width: 1024px) {
         margin-left: 0px;
       }
-      @media (max-width: 768px) {
+      @media (max-width: 785px) {
+        padding-top: 20px;
         position: absolute;
-        top: -1000px;
+        background-color: white;
+        display: flex;
+        margin: 0 auto;
+        width: 100%;
+        flex-direction: column;
+        height: auto;
+        margin: 0 auto;
+        transition: 1s ease-in-out;
+        box-shadow: 10px 10px 400px 0px rgba(0, 0, 0, 0.75);
+        -webkit-box-shadow: 10px 10px 400px 0px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 10px 10px 400px 0px rgba(0, 0, 0, 0.75);
       }
+
       .menuLinks {
         display: flex;
         list-style: none;
+        @media (max-width: 768px) {
+          flex-direction: column;
+          margin-top: 20px;
+        }
 
         button {
           margin-right: 65px;
@@ -63,30 +75,43 @@
           background-color: transparent;
           border: none;
           cursor: pointer;
-
-          &::before {
-            content: "";
-            position: absolute;
-            width: 0%;
-            height: 2px; 
-            bottom: -8px;
-            left: 0;
-            background-color: #151618; 
-            transition: width 0.3s ease; 
+          @media (max-width: 768px) {
+            margin-right: 0px !important;
+            margin-bottom: 30px;
+            font-family: Cormorant;
+            font-size: 24px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
           }
-          &:hover::before,
-          &:active::before {
-            width: 100%;
+
+          @media (min-width: 1024px) {
+            &::before {
+              content: "";
+              position: absolute;
+              width: 0%;
+              height: 2px;
+              bottom: -8px;
+              left: 0;
+              background-color: #151618;
+              transition: width 0.3s ease;
+            }
+            &:hover::before {
+              width: 100%;
+            }
           }
 
           @media (max-width: 1024px) {
-            margin-right: 30px;
+            margin-right: 20px;
           }
 
           &:last-child {
             margin-right: 124px;
             @media (max-width: 1024px) {
               margin-right: 50px;
+            }
+            @media (max-width: 768px) {
+              margin-right: 0px;
             }
           }
         }
@@ -95,26 +120,45 @@
   }
   .actions {
     display: flex;
+    justify-content: space-between;
+
+    @media (max-width: 480px) {
+      gap: 10px;
+    }
+    .lastAction {
+      border: none;
+      background-color: white;
+      margin-right: 80px;
+      @media (max-width: 1024px) {
+        margin-left: 0px;
+      }
+      @media (max-width: 480px) {
+        margin: 0px;
+      }
+    }
 
     button {
       border: none;
       background-color: white;
       margin-right: 20px;
-      &:last-child {
-        margin-left: 80px;
-      }
-
+      min-width: 20px;
+      min-height: 22px;
       cursor: pointer;
-      &:last-child {
-        @media (max-width: 1024px) {
-          margin-left: 50px;
-        }
-
-        @media (max-width: 480px) {
-          margin-left: 0px;
-          margin-right: 0px;
-        }
+      @media (max-width: 480px) {
+        margin: 0px;
       }
     }
   }
+}
+
+.close {
+  top: -1000px;
+  left: 0px;
+  right: 0px;
+}
+
+.open {
+  top: 0;
+  left: 0;
+  right: 0;
 }
