--- a/src/components/TeaBlog/index.module.scss
+++ b/src/components/TeaBlog/index.module.scss
@@ -42,7 +42,6 @@
     .blog {
       display: flex;
       flex-wrap: wrap;
-
       justify-content: space-between;
       margin-bottom: 60px;
       align-items: center;
@@ -50,43 +49,56 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin-bottom: 0px;
+        margin-bottom: 30px;
       }
       .blogItem {
         display: flex;
         margin-bottom: 40px;
-        @media (max-width: 480px) {
+        min-height: auto;
+        width: 100%;
+        max-width: 542px;
+        padding: 20px;
+        @media (max-width: 650px) {
           flex-direction: column;
-  
+          margin-bottom: 0px;
+          width: 100%;
+          justify-content: center;
+          align-items: center;
+          padding: 0px;
+          max-width: auto;
         }
 
-        img {
+        .imageContainer {
+          min-width: 270px;
+          min-height: 180px;
           margin-right: 20px;
-          width: 230px;
-          height: 153px;
-          flex-shrink: 0;
-          @media (max-width: 768px) {
-            width: 300px;
-            height: 250px;
-          }
-          @media (max-width: 480px) {
+          @media (max-width: 650px) {
             margin-right: 0px;
+            max-width: 230px;
+            max-height: 153px;
+          }
+          img {
+            width: 100%;
+            height: 100%;
+            @media (min-width: 1000px) {
+              &:hover {
+                scale: 1.1;
+                transition: 1s ease-out;
+              }
+            }
           }
         }
 
         .textBlock {
           display: flex;
           flex-direction: column;
-          width: 210px;
-          height: 86px;
-          flex-shrink: 0;
-          @media (max-width: 480px) {
-            margin-top: 10px;
-            margin-bottom: 30px;
-            
+          @media (max-width: 650px) {
+            max-width: 252px;
+            margin-bottom: 10px;
+            margin-top: 30px;
           }
 
-          p {
+          .text {
             font-family: Cormorant;
             font-size: 24px;
             font-style: normal;
@@ -95,28 +107,12 @@
             margin-bottom: 10px;
           }
 
-          span {
+          .author {
             font-family: Open Sans;
             font-size: 13px;
             font-style: normal;
             font-weight: 300;
             line-height: normal;
-          }
-
-          .read {
-            display: flex;
-            align-items: center;
-            margin-top: 20px;
-
-            span {
-              font-family: Open Sans;
-              font-size: 13px;
-              font-style: normal;
-              font-weight: 300;
-              line-height: normal;
-              margin-right: 8px;
-              display: block;
-            }
           }
         }
       }
