--- a/src/components/Join/index.module.scss
+++ b/src/components/Join/index.module.scss
@@ -73,7 +73,7 @@
           font-weight: 300;
           line-height: normal;
         }
-        // width: 580px;
+
       }
     }
 
@@ -99,19 +99,29 @@
           display: flex;
           margin-bottom: 12px;
         }
-        input {
-          font-family: Open Sans;
-          font-size: 20px;
-          font-style: normal;
-          font-weight: 300;
-          line-height: 150%;
-          outline: none;
-          border: none;
-          background-color: transparent;
-          color: #b8b58b;
-          width: 439.005px;
+        .borderInput {
           border-bottom: 1px solid #b8b58b;
           margin-right: 25px;
+          position: relative;
+          width: 439.005px;
+          @media (max-width: 480px) {
+            width: 350px;
+          }
+          input {
+            font-family: Open Sans;
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 300;
+            line-height: 150%;
+            outline: none;
+            border: none;
+            background-color: transparent;
+            color: #b8b58b;
+            width: 100%;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+          }
         }
 
         .label {
@@ -147,11 +157,13 @@
 
         .checkbox {
           display: flex;
+          
           input {
-            width: 10px;
-            height: 10px;
+            width: 20px;
+            height: 20px;
             flex-shrink: 0;
             background-color: #b8b58b;
+            margin-right: 10px;
           }
 
           p {
